--- a/EFCore/MAUI/MAUI/Views/LoginPage.xaml
+++ b/EFCore/MAUI/MAUI/Views/LoginPage.xaml
@@ -10,22 +10,22 @@
         <viewModels:LoginViewModel/>
     </ContentPage.BindingContext>
     <Grid RowDefinitions="*,Auto" >
-        <Image Source="loginbackground.png" Aspect="AspectFill" Margin="0,0,0,-40"/>
-        <Label Text="DevExpress" HorizontalOptions="Center" VerticalTextAlignment="Center" FontSize="40" TextColor="{StaticResource Gray600}"/>
-        <Label Text="Your next great app starts here" HorizontalOptions="Center" VerticalTextAlignment="Center" FontSize="14" Margin="0,60,0,0" TextColor="{StaticResource Gray500}"/>
-        <Border  VerticalOptions="End" Grid.Row="1" HeightRequest="490" StrokeShape="RoundRectangle 25,25,0,0">
-            <Grid RowDefinitions="Auto,Auto,Auto,Auto, Auto, *" Padding="20,20,20,40">
-                <Label Text="Welcome" TextColor="{StaticResource Primary}" HorizontalOptions="Center" FontAttributes="Bold" FontSize="30" Grid.Row="0"/>
+        <Image Source="genting_logo.svg" Aspect="Center" Margin="0,0,0,0"/>
+        <!--<Label Text="DevExpress" HorizontalOptions="Center" VerticalTextAlignment="Center" FontSize="40" TextColor="{StaticResource Gray600}"/>
+        <Label Text="Your next great app starts here" HorizontalOptions="Center" VerticalTextAlignment="Center" FontSize="14" Margin="0,60,0,0" TextColor="{StaticResource Gray500}"/>-->
+        <Border  VerticalOptions="End" Grid.Row="1" HeightRequest="600" StrokeShape="RoundRectangle 25,25,0,0">
+            <Grid RowDefinitions="Auto,Auto,Auto,Auto, Auto, *" Padding="20,20,20,80">
+                <Label Text="Welcome" TextColor="{StaticResource Black}" HorizontalOptions="Center" FontAttributes="Bold" FontSize="30" Grid.Row="0"/>
                 <Label Text="Please enter your login and password" TextColor="{StaticResource Gray600}" HorizontalOptions="Center" Grid.Row="1"/>
-                <dxe:TextEdit LabelText="Login" StartIcon="editorsname.svg" Margin="0,20,0,20" Grid.Row="2" Text="{Binding UserName}"/>
-                <dxe:PasswordEdit LabelText="Password" StartIcon="editorspassword.svg" Margin="0,20,0,20" HasError="{Binding HasError}" Text="{Binding Password}" ErrorText="{Binding ErrorText}" Grid.Row="3" />
+                <dxe:TextEdit LabelText="Login" StartIcon="editorsname.svg" Margin="0,50,0,20" Grid.Row="2" Text="{Binding UserName}" FocusedLabelColor="{StaticResource Primary}" FocusedBorderColor="{StaticResource Primary}"/>
+                <dxe:PasswordEdit LabelText="Password" StartIcon="editorspassword.svg" Margin="0,10,0,20" HasError="{Binding HasError}" Text="{Binding Password}" ErrorText="{Binding ErrorText}" Grid.Row="3" FocusedLabelColor="{StaticResource Primary}" FocusedBorderColor="{StaticResource Primary}"/>
                 <ActivityIndicator Margin="0,0,0,0" VerticalOptions="Center" IsRunning="{Binding IsAuthInProcess}" HorizontalOptions="Center" WidthRequest="40" HeightRequest="40" Color="{StaticResource Primary}" Grid.Row="4"/>
                 <VerticalStackLayout Grid.Row="5" VerticalOptions="End">
-                    <HorizontalStackLayout Margin="0,0,0,20" HorizontalOptions="Center" >
-                        <Label Text="Don't have an account?" VerticalTextAlignment="Center"/>
+                    <HorizontalStackLayout Margin="0,0,0,30" HorizontalOptions="Center" >
+                        <Label Text="Don't have an account?" VerticalTextAlignment="Center" TextColor="{StaticResource Gray600}"/>
                         <dxco:SimpleButton FontAttributes="Bold" Text="Sign up" BackgroundColor="Transparent" Margin="5,0,0,0" MinimumHeightRequest="0" TextColor="{StaticResource Primary}" FontSize="14" Padding="0" Command="{Binding SignUpCommand}"/>
                     </HorizontalStackLayout>
-                    <dxco:SimpleButton Text="Sign In" Command="{Binding LoginCommand}"/>
+                    <dxco:SimpleButton Text="Sign In" Command="{Binding LoginCommand}" BackgroundColor="{StaticResource  Primary}"/>
                 </VerticalStackLayout>
             </Grid>
         </Border>
